Updated measurements. Now a measurement have a program id. To create, update or get measurement, it requires the program ID
